// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Discogs Widget matches the error state snapshot 1`] = `
<DocumentFragment>
  <section
    class="css-vhkudu"
    id="discogs"
  >
    <div
      class="css-33wwjq"
    >
      <div
        class="css-1yb068l"
      >
        <h4>
          Something went wrong
        </h4>
        <p>
          Failed to load this widget.
        </p>
      </div>
      <div
        class="css-oxv113"
      />
    </div>
    <header
      class="css-f8y2ki"
    >
      <div
        class="css-x7xacr"
      >
        <h2
          class="css-16f4ihe"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-record-vinyl css-1f4q58s"
            data-icon="record-vinyl"
            data-prefix="fas"
            role="img"
            viewBox="0 0 512 512"
          >
            <path
              d="M0 256a256 256 0 1 1 512 0 256 256 0 1 1 -512 0zm256-96a96 96 0 1 1 0 192 96 96 0 1 1 0-192zm0 240a144 144 0 1 0 0-288 144 144 0 1 0 0 288zm0-112a32 32 0 1 0 0-64 32 32 0 1 0 0 64z"
              fill="currentColor"
            />
          </svg>
          Discogs
        </h2>
        <a
          class="css-bgnrb"
          href="https://www.discogs.com"
          title="Collection on Discogs"
        >
          Browse Collection
          <span
            class="read-more-icon"
          >
            →
          </span>
        </a>
      </div>
    </header>
    <div
      class="css-18bjwv1"
    >
      <div
        class="css-10mejol"
      >
        <h3
          class="css-9nh3l5"
        >
          Vinyl Collection
        </h3>
      </div>
      <p
        class="css-1qwovgy"
      >
        My owned vinyl records from Discogs.
      </p>
      <div
        class="css-us3dds"
      >
        <div
          class="css-nlq8f0"
          data-testid="vinyl-carousel"
        >
          <div
            class="css-ynlqmx"
          >
            <div
              class="vinyl-collection_grid null css-1xfuo0x"
            />
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`Discogs Widget matches the loaded state snapshot 1`] = `
<DocumentFragment>
  <section
    class="css-1gmhq94"
    id="discogs"
  >
    <header
      class="css-zvwfan"
    >
      <div
        class="css-x7xacr"
      >
        <h2
          class="css-16f4ihe"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-record-vinyl css-1f4q58s"
            data-icon="record-vinyl"
            data-prefix="fas"
            role="img"
            viewBox="0 0 512 512"
          >
            <path
              d="M0 256a256 256 0 1 1 512 0 256 256 0 1 1 -512 0zm256-96a96 96 0 1 1 0 192 96 96 0 1 1 0-192zm0 240a144 144 0 1 0 0-288 144 144 0 1 0 0 288zm0-112a32 32 0 1 0 0-64 32 32 0 1 0 0 64z"
              fill="currentColor"
            />
          </svg>
          Discogs
        </h2>
        <a
          class="css-bgnrb"
          href="https://www.discogs.com/user/chrisvogt/collection"
          title="Collection on Discogs"
        >
          Browse Collection
          <span
            class="read-more-icon"
          >
            →
          </span>
        </a>
      </div>
      <div
        class="css-iydney"
      >
        <div
          class="css-6ad07s"
        >
          <div
            class="css-1njnxko"
          >
            37 Vinyls Owned
          </div>
        </div>
      </div>
    </header>
    <div
      class="css-18bjwv1"
    >
      <div
        class="css-10mejol"
      >
        <h3
          class="css-9nh3l5"
        >
          Vinyl Collection
        </h3>
      </div>
      <p
        class="css-1qwovgy"
      >
        My owned vinyl records from Discogs.
      </p>
      <div
        class="css-us3dds"
      >
        <div
          class="css-nlq8f0"
          data-testid="vinyl-carousel"
        >
          <div
            class="css-ynlqmx"
          >
            <div
              class="vinyl-collection_grid null css-1xfuo0x"
            >
              <div
                class="css-xsaowq"
              >
                <div
                  aria-label="The Rise & Fall Of A Midwest Princess (2023) - Chappell Roan. Click to view details."
                  class="vinyl-record css-1uxsoal"
                  role="button"
                  tabindex="0"
                  title="The Rise & Fall Of A Midwest Princess (2023) - Chappell Roan"
                >
                  <div
                    class="css-12d7pfc"
                  >
                    <div
                      class="vinyl-record_image css-18n965x"
                    >
                      <img
                        alt="The Rise & Fall Of A Midwest Princess album cover"
                        class="vinyl-record_album-art css-1ybonlr"
                        crossorigin="anonymous"
                        loading="lazy"
                        src="https://example.com/thumb.jpg"
                      />
                    </div>
                    <div
                      class="vinyl-record_caption css-12vw5gc"
                    >
                      <span
                        class="css-kvy207"
                      >
                        The Rise & Fall Of A Midwest Princess (2023) - Chappell Roan
                      </span>
                      <div
                        class="vinyl-record_orbit css-nh7rc5"
                      >
                        <svg
                          aria-hidden="true"
                          height="100%"
                          role="presentation"
                          style="display: block;"
                          viewBox="0 0 100 100"
                          width="100%"
                        >
                          <defs>
                            <path
                              d="M50,50 m0,-44 a44,44 0 1,1 0,88 a44,44 0 1,1 0,-88"
                              id="textCircle-28461454"
                            />
                          </defs>
                          <g
                            class="css-1uqa7mt"
                          >
                            <text
                              class="css-ir7wai"
                              fill="currentColor"
                            >
                              <textpath
                                href="#textCircle-28461454"
                                method="align"
                                spacing="auto"
                                startOffset="0%"
                              >
                                The Rise & Fall Of A Midwest Princess • Chappell Roan • 2023 • The Rise & Fall Of A Midwest Princess • Chappell Roan • 2023 • 
                              </textpath>
                            </text>
                          </g>
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`Discogs Widget matches the loading state snapshot 1`] = `
<DocumentFragment>
  <section
    class="css-1gmhq94"
    id="discogs"
  >
    <header
      class="css-zvwfan"
    >
      <div
        class="css-x7xacr"
      >
        <h2
          class="css-16f4ihe"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-record-vinyl css-1f4q58s"
            data-icon="record-vinyl"
            data-prefix="fas"
            role="img"
            viewBox="0 0 512 512"
          >
            <path
              d="M0 256a256 256 0 1 1 512 0 256 256 0 1 1 -512 0zm256-96a96 96 0 1 1 0 192 96 96 0 1 1 0-192zm0 240a144 144 0 1 0 0-288 144 144 0 1 0 0 288zm0-112a32 32 0 1 0 0-64 32 32 0 1 0 0 64z"
              fill="currentColor"
            />
          </svg>
          Discogs
        </h2>
        <svg
          aria-label="Loading"
          class="css-1xa9lgo"
          height="24"
          role="status"
          viewBox="0 0 24 24"
          width="24"
        >
          <circle
            cx="12"
            cy="12"
            fill="none"
            r="10"
            stroke="currentColor"
            stroke-dasharray="31.4 31.4"
            stroke-linecap="round"
            stroke-width="3"
          />
        </svg>
      </div>
      <div
        class="css-iydney"
      >
        <div
          class="css-6ad07s"
        >
          <div
            class="css-1njnxko"
          >
             
          </div>
          <div
            class="css-137c6l"
          >
             
          </div>
        </div>
      </div>
    </header>
    <div
      class="css-18bjwv1"
    >
      <div
        class="css-10mejol"
      >
        <h3
          class="css-9nh3l5"
        >
          Vinyl Collection
        </h3>
      </div>
      <p
        class="css-1qwovgy"
      >
        My owned vinyl records from Discogs.
      </p>
      <div
        class="css-us3dds"
      >
        <div
          class="css-1k7abfv"
          data-testid="vinyl-carousel"
        >
          <div
            class="css-14hc1pz"
          >
            <div
              class="vinyl-collection_grid null css-1xfuo0x"
            >
              <div
                class="css-6neebt"
              >
                <div
                  aria-hidden="true"
                  class="css-6bj1hg"
                >
                  <div
                    class="css-12d7pfc"
                  >
                    <div
                      class="css-6yhx8d"
                    >
                      <div
                        class="show-loading-animation css-1lma7io"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-6neebt"
              >
                <div
                  aria-hidden="true"
                  class="css-6bj1hg"
                >
                  <div
                    class="css-12d7pfc"
                  >
                    <div
                      class="css-6yhx8d"
                    >
                      <div
                        class="show-loading-animation css-1lma7io"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-6neebt"
              >
                <div
                  aria-hidden="true"
                  class="css-6bj1hg"
                >
                  <div
                    class="css-12d7pfc"
                  >
                    <div
                      class="css-6yhx8d"
                    >
                      <div
                        class="show-loading-animation css-1lma7io"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-6neebt"
              >
                <div
                  aria-hidden="true"
                  class="css-6bj1hg"
                >
                  <div
                    class="css-12d7pfc"
                  >
                    <div
                      class="css-6yhx8d"
                    >
                      <div
                        class="show-loading-animation css-1lma7io"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-6neebt"
              >
                <div
                  aria-hidden="true"
                  class="css-6bj1hg"
                >
                  <div
                    class="css-12d7pfc"
                  >
                    <div
                      class="css-6yhx8d"
                    >
                      <div
                        class="show-loading-animation css-1lma7io"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-6neebt"
              >
                <div
                  aria-hidden="true"
                  class="css-6bj1hg"
                >
                  <div
                    class="css-12d7pfc"
                  >
                    <div
                      class="css-6yhx8d"
                    >
                      <div
                        class="show-loading-animation css-1lma7io"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-6neebt"
              >
                <div
                  aria-hidden="true"
                  class="css-6bj1hg"
                >
                  <div
                    class="css-12d7pfc"
                  >
                    <div
                      class="css-6yhx8d"
                    >
                      <div
                        class="show-loading-animation css-1lma7io"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-6neebt"
              >
                <div
                  aria-hidden="true"
                  class="css-6bj1hg"
                >
                  <div
                    class="css-12d7pfc"
                  >
                    <div
                      class="css-6yhx8d"
                    >
                      <div
                        class="show-loading-animation css-1lma7io"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-6neebt"
              >
                <div
                  aria-hidden="true"
                  class="css-6bj1hg"
                >
                  <div
                    class="css-12d7pfc"
                  >
                    <div
                      class="css-6yhx8d"
                    >
                      <div
                        class="show-loading-animation css-1lma7io"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-6neebt"
              >
                <div
                  aria-hidden="true"
                  class="css-6bj1hg"
                >
                  <div
                    class="css-12d7pfc"
                  >
                    <div
                      class="css-6yhx8d"
                    >
                      <div
                        class="show-loading-animation css-1lma7io"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-6neebt"
              >
                <div
                  aria-hidden="true"
                  class="css-6bj1hg"
                >
                  <div
                    class="css-12d7pfc"
                  >
                    <div
                      class="css-6yhx8d"
                    >
                      <div
                        class="show-loading-animation css-1lma7io"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-6neebt"
              >
                <div
                  aria-hidden="true"
                  class="css-6bj1hg"
                >
                  <div
                    class="css-12d7pfc"
                  >
                    <div
                      class="css-6yhx8d"
                    >
                      <div
                        class="show-loading-animation css-1lma7io"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-6neebt"
              >
                <div
                  aria-hidden="true"
                  class="css-6bj1hg"
                >
                  <div
                    class="css-12d7pfc"
                  >
                    <div
                      class="css-6yhx8d"
                    >
                      <div
                        class="show-loading-animation css-1lma7io"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-6neebt"
              >
                <div
                  aria-hidden="true"
                  class="css-6bj1hg"
                >
                  <div
                    class="css-12d7pfc"
                  >
                    <div
                      class="css-6yhx8d"
                    >
                      <div
                        class="show-loading-animation css-1lma7io"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-6neebt"
              >
                <div
                  aria-hidden="true"
                  class="css-6bj1hg"
                >
                  <div
                    class="css-12d7pfc"
                  >
                    <div
                      class="css-6yhx8d"
                    >
                      <div
                        class="show-loading-animation css-1lma7io"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-6neebt"
              >
                <div
                  aria-hidden="true"
                  class="css-6bj1hg"
                >
                  <div
                    class="css-12d7pfc"
                  >
                    <div
                      class="css-6yhx8d"
                    >
                      <div
                        class="show-loading-animation css-1lma7io"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-6neebt"
              >
                <div
                  aria-hidden="true"
                  class="css-6bj1hg"
                >
                  <div
                    class="css-12d7pfc"
                  >
                    <div
                      class="css-6yhx8d"
                    >
                      <div
                        class="show-loading-animation css-1lma7io"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-6neebt"
              >
                <div
                  aria-hidden="true"
                  class="css-6bj1hg"
                >
                  <div
                    class="css-12d7pfc"
                  >
                    <div
                      class="css-6yhx8d"
                    >
                      <div
                        class="show-loading-animation css-1lma7io"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="css-14hc1pz"
          >
            <div
              class="vinyl-collection_grid null css-1xfuo0x"
            >
              <div
                class="css-6neebt"
              >
                <div
                  aria-hidden="true"
                  class="css-6bj1hg"
                >
                  <div
                    class="css-12d7pfc"
                  >
                    <div
                      class="css-6yhx8d"
                    >
                      <div
                        class="show-loading-animation css-1lma7io"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-6neebt"
              >
                <div
                  aria-hidden="true"
                  class="css-6bj1hg"
                >
                  <div
                    class="css-12d7pfc"
                  >
                    <div
                      class="css-6yhx8d"
                    >
                      <div
                        class="show-loading-animation css-1lma7io"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-6neebt"
              >
                <div
                  aria-hidden="true"
                  class="css-6bj1hg"
                >
                  <div
                    class="css-12d7pfc"
                  >
                    <div
                      class="css-6yhx8d"
                    >
                      <div
                        class="show-loading-animation css-1lma7io"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-6neebt"
              >
                <div
                  aria-hidden="true"
                  class="css-6bj1hg"
                >
                  <div
                    class="css-12d7pfc"
                  >
                    <div
                      class="css-6yhx8d"
                    >
                      <div
                        class="show-loading-animation css-1lma7io"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-6neebt"
              >
                <div
                  aria-hidden="true"
                  class="css-6bj1hg"
                >
                  <div
                    class="css-12d7pfc"
                  >
                    <div
                      class="css-6yhx8d"
                    >
                      <div
                        class="show-loading-animation css-1lma7io"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-6neebt"
              >
                <div
                  aria-hidden="true"
                  class="css-6bj1hg"
                >
                  <div
                    class="css-12d7pfc"
                  >
                    <div
                      class="css-6yhx8d"
                    >
                      <div
                        class="show-loading-animation css-1lma7io"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-6neebt"
              >
                <div
                  aria-hidden="true"
                  class="css-6bj1hg"
                >
                  <div
                    class="css-12d7pfc"
                  >
                    <div
                      class="css-6yhx8d"
                    >
                      <div
                        class="show-loading-animation css-1lma7io"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-6neebt"
              >
                <div
                  aria-hidden="true"
                  class="css-6bj1hg"
                >
                  <div
                    class="css-12d7pfc"
                  >
                    <div
                      class="css-6yhx8d"
                    >
                      <div
                        class="show-loading-animation css-1lma7io"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-6neebt"
              >
                <div
                  aria-hidden="true"
                  class="css-6bj1hg"
                >
                  <div
                    class="css-12d7pfc"
                  >
                    <div
                      class="css-6yhx8d"
                    >
                      <div
                        class="show-loading-animation css-1lma7io"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-6neebt"
              >
                <div
                  aria-hidden="true"
                  class="css-6bj1hg"
                >
                  <div
                    class="css-12d7pfc"
                  >
                    <div
                      class="css-6yhx8d"
                    >
                      <div
                        class="show-loading-animation css-1lma7io"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-6neebt"
              >
                <div
                  aria-hidden="true"
                  class="css-6bj1hg"
                >
                  <div
                    class="css-12d7pfc"
                  >
                    <div
                      class="css-6yhx8d"
                    >
                      <div
                        class="show-loading-animation css-1lma7io"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-6neebt"
              >
                <div
                  aria-hidden="true"
                  class="css-6bj1hg"
                >
                  <div
                    class="css-12d7pfc"
                  >
                    <div
                      class="css-6yhx8d"
                    >
                      <div
                        class="show-loading-animation css-1lma7io"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-6neebt"
              >
                <div
                  aria-hidden="true"
                  class="css-6bj1hg"
                >
                  <div
                    class="css-12d7pfc"
                  >
                    <div
                      class="css-6yhx8d"
                    >
                      <div
                        class="show-loading-animation css-1lma7io"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-6neebt"
              >
                <div
                  aria-hidden="true"
                  class="css-6bj1hg"
                >
                  <div
                    class="css-12d7pfc"
                  >
                    <div
                      class="css-6yhx8d"
                    >
                      <div
                        class="show-loading-animation css-1lma7io"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-6neebt"
              >
                <div
                  aria-hidden="true"
                  class="css-6bj1hg"
                >
                  <div
                    class="css-12d7pfc"
                  >
                    <div
                      class="css-6yhx8d"
                    >
                      <div
                        class="show-loading-animation css-1lma7io"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-6neebt"
              >
                <div
                  aria-hidden="true"
                  class="css-6bj1hg"
                >
                  <div
                    class="css-12d7pfc"
                  >
                    <div
                      class="css-6yhx8d"
                    >
                      <div
                        class="show-loading-animation css-1lma7io"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-6neebt"
              >
                <div
                  aria-hidden="true"
                  class="css-6bj1hg"
                >
                  <div
                    class="css-12d7pfc"
                  >
                    <div
                      class="css-6yhx8d"
                    >
                      <div
                        class="show-loading-animation css-1lma7io"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-6neebt"
              >
                <div
                  aria-hidden="true"
                  class="css-6bj1hg"
                >
                  <div
                    class="css-12d7pfc"
                  >
                    <div
                      class="css-6yhx8d"
                    >
                      <div
                        class="show-loading-animation css-1lma7io"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="css-14hc1pz"
          >
            <div
              class="vinyl-collection_grid null css-1xfuo0x"
            >
              <div
                class="css-6neebt"
              >
                <div
                  aria-hidden="true"
                  class="css-6bj1hg"
                >
                  <div
                    class="css-12d7pfc"
                  >
                    <div
                      class="css-6yhx8d"
                    >
                      <div
                        class="show-loading-animation css-1lma7io"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-6neebt"
              >
                <div
                  aria-hidden="true"
                  class="css-6bj1hg"
                >
                  <div
                    class="css-12d7pfc"
                  >
                    <div
                      class="css-6yhx8d"
                    >
                      <div
                        class="show-loading-animation css-1lma7io"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-6neebt"
              >
                <div
                  aria-hidden="true"
                  class="css-6bj1hg"
                >
                  <div
                    class="css-12d7pfc"
                  >
                    <div
                      class="css-6yhx8d"
                    >
                      <div
                        class="show-loading-animation css-1lma7io"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-6neebt"
              >
                <div
                  aria-hidden="true"
                  class="css-6bj1hg"
                >
                  <div
                    class="css-12d7pfc"
                  >
                    <div
                      class="css-6yhx8d"
                    >
                      <div
                        class="show-loading-animation css-1lma7io"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-6neebt"
              >
                <div
                  aria-hidden="true"
                  class="css-6bj1hg"
                >
                  <div
                    class="css-12d7pfc"
                  >
                    <div
                      class="css-6yhx8d"
                    >
                      <div
                        class="show-loading-animation css-1lma7io"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-6neebt"
              >
                <div
                  aria-hidden="true"
                  class="css-6bj1hg"
                >
                  <div
                    class="css-12d7pfc"
                  >
                    <div
                      class="css-6yhx8d"
                    >
                      <div
                        class="show-loading-animation css-1lma7io"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-6neebt"
              >
                <div
                  aria-hidden="true"
                  class="css-6bj1hg"
                >
                  <div
                    class="css-12d7pfc"
                  >
                    <div
                      class="css-6yhx8d"
                    >
                      <div
                        class="show-loading-animation css-1lma7io"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-6neebt"
              >
                <div
                  aria-hidden="true"
                  class="css-6bj1hg"
                >
                  <div
                    class="css-12d7pfc"
                  >
                    <div
                      class="css-6yhx8d"
                    >
                      <div
                        class="show-loading-animation css-1lma7io"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-6neebt"
              >
                <div
                  aria-hidden="true"
                  class="css-6bj1hg"
                >
                  <div
                    class="css-12d7pfc"
                  >
                    <div
                      class="css-6yhx8d"
                    >
                      <div
                        class="show-loading-animation css-1lma7io"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-6neebt"
              >
                <div
                  aria-hidden="true"
                  class="css-6bj1hg"
                >
                  <div
                    class="css-12d7pfc"
                  >
                    <div
                      class="css-6yhx8d"
                    >
                      <div
                        class="show-loading-animation css-1lma7io"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-6neebt"
              >
                <div
                  aria-hidden="true"
                  class="css-6bj1hg"
                >
                  <div
                    class="css-12d7pfc"
                  >
                    <div
                      class="css-6yhx8d"
                    >
                      <div
                        class="show-loading-animation css-1lma7io"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-6neebt"
              >
                <div
                  aria-hidden="true"
                  class="css-6bj1hg"
                >
                  <div
                    class="css-12d7pfc"
                  >
                    <div
                      class="css-6yhx8d"
                    >
                      <div
                        class="show-loading-animation css-1lma7io"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-6neebt"
              >
                <div
                  aria-hidden="true"
                  class="css-6bj1hg"
                >
                  <div
                    class="css-12d7pfc"
                  >
                    <div
                      class="css-6yhx8d"
                    >
                      <div
                        class="show-loading-animation css-1lma7io"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-6neebt"
              >
                <div
                  aria-hidden="true"
                  class="css-6bj1hg"
                >
                  <div
                    class="css-12d7pfc"
                  >
                    <div
                      class="css-6yhx8d"
                    >
                      <div
                        class="show-loading-animation css-1lma7io"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-6neebt"
              >
                <div
                  aria-hidden="true"
                  class="css-6bj1hg"
                >
                  <div
                    class="css-12d7pfc"
                  >
                    <div
                      class="css-6yhx8d"
                    >
                      <div
                        class="show-loading-animation css-1lma7io"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-6neebt"
              >
                <div
                  aria-hidden="true"
                  class="css-6bj1hg"
                >
                  <div
                    class="css-12d7pfc"
                  >
                    <div
                      class="css-6yhx8d"
                    >
                      <div
                        class="show-loading-animation css-1lma7io"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-6neebt"
              >
                <div
                  aria-hidden="true"
                  class="css-6bj1hg"
                >
                  <div
                    class="css-12d7pfc"
                  >
                    <div
                      class="css-6yhx8d"
                    >
                      <div
                        class="show-loading-animation css-1lma7io"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-6neebt"
              >
                <div
                  aria-hidden="true"
                  class="css-6bj1hg"
                >
                  <div
                    class="css-12d7pfc"
                  >
                    <div
                      class="css-6yhx8d"
                    >
                      <div
                        class="show-loading-animation css-1lma7io"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="css-qvrngi"
      >
        <div
          class="css-1ixi9e6"
        />
        <div
          class="css-4cd05p"
        />
        <div
          class="css-1ixi9e6"
        />
      </div>
    </div>
  </section>
</DocumentFragment>
`;
